program/rust/bindings2.rs

#[test]
fn bindgen_test_layout_pc_map_table() {
    assert_eq!(
        ::std::mem::size_of::<pc_map_table>(),
        20536usize,
        concat!("Size of: ", stringify!(pc_map_table))
    );
    assert_eq!(
        ::std::mem::align_of::<pc_map_table>(),
        8usize,
        concat!("Alignment of ", stringify!(pc_map_table))
    );
    fn test_field_magic_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_map_table>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).magic_) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_map_table),
                "::",
                stringify!(magic_)
            )
        );
    }
    test_field_magic_();
    fn test_field_ver_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_map_table>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).ver_) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_map_table),
                "::",
                stringify!(ver_)
            )
        );
    }
    test_field_ver_();
    fn test_field_type_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_map_table>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_map_table),
                "::",
                stringify!(type_)
            )
        );
    }
    test_field_type_();
    fn test_field_size_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_map_table>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).size_) as usize - ptr as usize
            },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_map_table),
                "::",
                stringify!(size_)
            )
        );
    }
    test_field_size_();
    fn test_field_num_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_map_table>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).num_) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_map_table),
                "::",
                stringify!(num_)
            )
        );
    }
    test_field_num_();
    fn test_field_unused_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_map_table>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).unused_) as usize - ptr as usize
            },
            20usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_map_table),
                "::",
                stringify!(unused_)
            )
        );
    }
    test_field_unused_();
    fn test_field_next_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_map_table>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).next_) as usize - ptr as usize
            },
            24usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_map_table),
                "::",
                stringify!(next_)
            )
        );
    }
    test_field_next_();
    fn test_field_prod_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_map_table>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).prod_) as usize - ptr as usize
            },
            56usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_map_table),
                "::",
                stringify!(prod_)
            )
        );
    }
    test_field_prod_();
}
pub type pc_map_table_t = pc_map_table;
#[repr(C)]
#[derive(Debug)]
pub struct pc_str {
    pub len_: u8,
    pub data_: __IncompleteArrayField<::std::os::raw::c_char>,
}
#[test]
fn bindgen_test_layout_pc_str() {
    assert_eq!(
        ::std::mem::size_of::<pc_str>(),
        1usize,
        concat!("Size of: ", stringify!(pc_str))
    );
    assert_eq!(
        ::std::mem::align_of::<pc_str>(),
        1usize,
        concat!("Alignment of ", stringify!(pc_str))
    );
    fn test_field_len_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_str>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).len_) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_str),
                "::",
                stringify!(len_)
            )
        );
    }
    test_field_len_();
    fn test_field_data_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_str>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).data_) as usize - ptr as usize
            },
            1usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_str),
                "::",
                stringify!(data_)
            )
        );
    }
    test_field_data_();
}
pub type pc_str_t = pc_str;
#[repr(C)]
#[derive(Copy, Clone)]
pub struct pc_prod {
    pub magic_: u32,
    pub ver_: u32,
    pub type_: u32,
    pub size_: u32,
    pub px_acc_: pc_pub_key_t,
}
#[test]
fn bindgen_test_layout_pc_prod() {
    assert_eq!(
        ::std::mem::size_of::<pc_prod>(),
        48usize,
        concat!("Size of: ", stringify!(pc_prod))
    );
    assert_eq!(
        ::std::mem::align_of::<pc_prod>(),
        8usize,
        concat!("Alignment of ", stringify!(pc_prod))
    );
    fn test_field_magic_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_prod>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).magic_) as usize - ptr as usize
            },
            0usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_prod),
                "::",
                stringify!(magic_)
            )
        );
    }
    test_field_magic_();
    fn test_field_ver_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_prod>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).ver_) as usize - ptr as usize
            },
            4usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_prod),
                "::",
                stringify!(ver_)
            )
        );
    }
    test_field_ver_();
    fn test_field_type_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_prod>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).type_) as usize - ptr as usize
            },
            8usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_prod),
                "::",
                stringify!(type_)
            )
        );
    }
    test_field_type_();
    fn test_field_size_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_prod>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).size_) as usize - ptr as usize
            },
            12usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_prod),
                "::",
                stringify!(size_)
            )
        );
    }
    test_field_size_();
    fn test_field_px_acc_() {
        assert_eq!(
            unsafe {
                let uninit = ::std::mem::MaybeUninit::<pc_prod>::uninit();
                let ptr = uninit.as_ptr();
                ::std::ptr::addr_of!((*ptr).px_acc_) as usize - ptr as usize
            },
            16usize,
            concat!(
                "Offset of field: ",
                stringify!(pc_prod),
                "::",
                stringify!(px_acc_)
            )
        );
    }
    test_field_px_acc_();
}
pub type pc_prod_t = pc_prod;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct pc_price_info {
    pub price_: i64,
    pub conf_: u64,
    pub status_: u32,
    pub corp_act_status_: u32,
    pub pub_slot_: u64,
}
